--- a/frontend/src/sass/partials/_follow-us.sass
+++ b/frontend/src/sass/partials/_follow-us.sass
@@ -13,6 +13,7 @@
 			width: 100%
 			min-height: 254px
 			object-fit: cover
+			aspect-ratio: 2/0.78
 			+md
 				border-radius: 0
 	.section__head
