--- a/frontend/src/sass/partials/_packages.sass
+++ b/frontend/src/sass/partials/_packages.sass
@@ -178,7 +178,7 @@
 			position: absolute
 			top: 0.08em
 			left: 0
-			background: url('/img/check.svg') no-repeat center
+			background: url('/img/check.svg?2') no-repeat center
 			background-size: contain
 			width: 1.3em
 			height: 1.3em
