add new title and fix styles

--- a/frontend/src/templates/partials/_numbers.html
+++ b/frontend/src/templates/partials/_numbers.html
@@ -1,7 +1,7 @@
 <section class="section sec-numbers" id="numbers">
 	<div class="container">
 		<div class="section__head">
-			<!-- <h3 class="section__suptitle">{{info.tilesTitle}}</h3> -->
+			<h3 class="section__suptitle">{{info.tilesHeadTitle}}</h3>
 			<h2 class="section__title">{{info.tilesTitle}}</h2>
 		</div>
 
