--- a/frontend/src/sass/helpers/_icons.sass
+++ b/frontend/src/sass/helpers/_icons.sass
@@ -3,10 +3,11 @@
 	display: inline-block
 	width: 1em
 	height: 1em
-	stroke-width: 0
 	stroke: currentColor
 	fill: currentColor
 	transition: all 0.2s linear
 	position: relative
 	&-heart, &-product, &-lightning, &-connections, &-star-wc, &-across, &-chevron-left, &-chevron-right
 		fill: none
+	&-arrow-right
+		stroke-width: 2px
