add toggler for one stop shop sectuion and fix margin

--- a/frontend/src/sass/style.sass
+++ b/frontend/src/sass/style.sass
@@ -58,6 +58,7 @@ body
 @import partials/features
 @import partials/partners
 @import partials/about
+@import partials/banner
 @import partials/popups
 
 @import "partials/footer"
