change name toggler

--- a/frontend/src/templates/index.html
+++ b/frontend/src/templates/index.html
@@ -6,7 +6,7 @@
 	{% include "partials/_conference-sponsor.html" %}
 	{% include "partials/_numbers.html" %}
 	{% include "partials/_packages.html" %}
-	{% if not info.isEcosystemShow %}
+	{% if not info.isOneStopShopShow %}
 	{% include "partials/_ecosystem.html" %}
 	{% endif %}
 	{% if not info.isBannerShow %}
