add auto format to images

--- a/frontend/src/templates/partials/_ecosystem.html
+++ b/frontend/src/templates/partials/_ecosystem.html
@@ -22,7 +22,7 @@
 				<a href="{{item.url}}" class="swiper-slide conferences-item" target="_blank">
 
 					<div class="conferences-item__img">
-						<img src="{{item.img.asset.url}}" alt="">
+						<img src="{{item.img.asset.url}}?auto=format" alt="">
 					</div>
 					<div class="conferences-item__body">
 						<div class="conferences-item__title">{{item.title}}</div>
