--- a/frontend/src/templates/partials/_follow-us.html
+++ b/frontend/src/templates/partials/_follow-us.html
@@ -1,7 +1,7 @@
 <section class="section sec-follow-us" id="follow-us">
 	<div class="container">
 		<div class="sec-follow-us__img">
-			<img src="{{info.followUsImg.asset.url}}" alt="{{info.followUsTitle}}" role="presentation">
+			<img src="{{info.followUsImg.asset.url}}?w=1200&auto=format" alt="{{info.followUsTitle}}" role="presentation">
 		</div>
 		<div class="section__head">
 			<h2 class="section__title">{{info.followUsTitle}}</h2>
