add canonical url

--- a/frontend/src/templates/layouts/_layout.html
+++ b/frontend/src/templates/layouts/_layout.html
@@ -14,6 +14,7 @@
 	<meta property="og:title" content="{{ info.pageTitle }}"/>
 	<meta property="og:description" content="{{ info.pageDescription }}"/>
 	<meta property="og:image" content="{{ info.ogImage.asset.url }}"/>
+	<link rel="canonical" href="{{info.sponsorsUrl}}">
   <style>
     :root {
       --clr-theme: {{ main.theme.hex }};
