add styles for productivity banner

--- a/frontend/src/sass/helpers/_fonts.sass
+++ b/frontend/src/sass/helpers/_fonts.sass
@@ -28,3 +28,9 @@
 	src: url(../fonts/JetBrainsMono-Regular.woff2) format("woff2"), url(../fonts/JetBrainsMono-Regular.woff) format("woff")
 	font-style: normal
 	font-weight: 400
+
+@font-face
+	font-family: "GeistMono"
+	src: url(../fonts/GeistMono-Regular.woff2) format("woff2"), url(../fonts/GeistMono-Regular.woff) format("woff")
+	font-style: normal
+	font-weight: 400
