--- a/frontend/src/sass/helpers/_variables.sass
+++ b/frontend/src/sass/helpers/_variables.sass
@@ -1,7 +1,9 @@
 \:root
 
 	--ff: "GothamPro", Arial, Helvetica, sans-serif
-	--ff2: JetBrainsMono, Arial, sans-serif
+	--c3: JetBrainsMono, Arial, sans-serif
+	--pc: GeistMono, Arial, sans-serif
+
 	--clr-black: #0F0F0F
 	--clr-black-300: #323232
 	--clr-black-350: #3D3D3D
