--- a/frontend/src/templates/partials/_banner.html
+++ b/frontend/src/templates/partials/_banner.html
@@ -1,7 +1,7 @@
 <section class="section sec-promo-banner" id="promo-banner">
 	<div class="container">
 
-		<div class="banner {{info.bannerConf}}" style="background-image: url('{{info.bannerBg.asset.url}}');">
+		<div class="banner {{info.bannerConf if info.bannerConf}}" style="background-image: url('{{info.bannerBg.asset.url}}');">
 			<a href="{{info.bannerUrl}}" class="banner__link">&nbsp;</a>
 			<div class="banner__head">
 				<div class="banner__logo">
