--- a/frontend/src/sass/helpers/_icons.sass
+++ b/frontend/src/sass/helpers/_icons.sass
@@ -3,11 +3,14 @@
 	display: inline-block
 	width: 1em
 	height: 1em
-	stroke: currentColor
 	fill: currentColor
 	transition: all 0.2s linear
 	position: relative
-	&-heart, &-product, &-lightning, &-connections, &-star-wc, &-across, &-chevron-left, &-chevron-right
+	&-heart, &-product, &-lightning, &-connections, &-star-wc, &-across, &-chevron-left, &-chevron-right, &-twitter, &-fb
 		fill: none
 	&-arrow-right
+		stroke: currentColor
 		stroke-width: 2px
+
+	&-chevron-right, &-chevron-left
+		stroke: currentColor
