--- a/frontend/src/sass/helpers/_variables.sass
+++ b/frontend/src/sass/helpers/_variables.sass
@@ -3,6 +3,7 @@
 	--ff: "GothamPro", Arial, Helvetica, sans-serif
 	--c3: JetBrainsMono, Arial, sans-serif
 	--pc: GeistMono, Arial, sans-serif
+	--pc2: Mona-Sans, Arial, sans-serif
 
 	--clr-black: #0F0F0F
 	--clr-black-300: #323232
