--- a/frontend/src/sass/partials/_common.sass
+++ b/frontend/src/sass/partials/_common.sass
@@ -105,3 +105,17 @@
 			border-color: var(--clr-theme)
 			.icon
 				color: var(--clr-black)
+
+	&--default
+		gap: 2px
+		.social__link, .social__btn
+			width: 25px
+			height: 25px
+			border: none
+			border-radius: 0
+			background: none
+			.icon
+				font-size: 16px
+			&:hover, &:focus-visible
+				.icon
+					color: var(--clr-theme)
