--- a/frontend/src/sass/partials/_footer.sass
+++ b/frontend/src/sass/partials/_footer.sass
@@ -3,6 +3,7 @@
 
 	padding-top: 30px
 	position: relative
+	z-index: 21
 	+md
 		padding-top: 0
 	&:before
@@ -12,7 +13,7 @@
 		left: 0
 		width: 100%
 		height: calc(100% + 80px)
-		background: url('../img/footer-bg.webp') repeat-x bottom center
+		background: var(--clr-black) url('../img/footer-bg.webp') repeat-x bottom center
 		background-size: auto
 		pointer-events: none
 	&__top
