--- a/frontend/src/templates/partials/_about.html
+++ b/frontend/src/templates/partials/_about.html
@@ -1,6 +1,6 @@
 <section class="section sec-about">
 	<div class="container">
-		<div class="section__head">
+		<div class="section__head shine">
 			<h3 class="section__suptitle">{{info.aboutTitle}}</h3>
 			<h2 class="section__title">{{info.aboutSubTitle}}</h2>
 		</div>
