--- a/frontend/src/templates/partials/_conference-sponsor.html
+++ b/frontend/src/templates/partials/_conference-sponsor.html
@@ -1,6 +1,6 @@
-<section class="section conference-sponsor">
+<section class="section conference-sponsor" id="get-sponsors">
 	<div class="container">
-		<div class="section__head">
+		<div class="section__head shine">
 			<h3 class="section__suptitle">{{info.motivationTitle}}</h3>
 			<h2 class="section__title">{{info.motivationSubTitle}}</h2>
 		</div>
