--- a/frontend/src/templates/partials/_ecosystem.html
+++ b/frontend/src/templates/partials/_ecosystem.html
@@ -1,7 +1,7 @@
 <section class="section sec-ecosystem" id="ecosystem">
 	<div class="container">
 
-		<div class="section__head">
+		<div class="section__head shine">
 			<h3 class="section__suptitle">{{info.shopTitle}}</h3>
 			<h2 class="section__title">{{info.shopSubtitle}}</h2>
 			{% if info.shopDescription %}
