--- a/frontend/src/sass/helpers/_fonts.sass
+++ b/frontend/src/sass/helpers/_fonts.sass
@@ -34,3 +34,9 @@
 	src: url(../fonts/GeistMono-Regular.woff2) format("woff2"), url(../fonts/GeistMono-Regular.woff) format("woff")
 	font-style: normal
 	font-weight: 400
+
+@font-face
+	font-family: "Mona-Sans"
+	src: url(../fonts/Mona-Sans-MediumWide.woff2) format("woff2"), url(../fonts/Mona-Sans-MediumWide.woff) format("woff")
+	font-style: normal
+	font-weight: 500
