--- a/frontend/src/sass/partials/_banner.sass
+++ b/frontend/src/sass/partials/_banner.sass
@@ -16,7 +16,7 @@
 	+lg
 		gap: 60px
 	+md
-
+		min-height: 250px
 		padding: 40px
 	+sm
 		flex-direction: column
@@ -50,6 +50,9 @@
 	&__content
 		flex: 1
 		min-width: 1px
+		+sm
+			margin-top: auto
+			flex: none
 
 	&__title
 		color: var(--_color, #fff)
@@ -122,4 +125,10 @@
 		--_color: #83f35d
 	&.pc
 		font-family: var(--pc)
-		--_color: #FAFF05
+		--_color: #000
+		.banner__title
+			font-family: var(--pc2)
+		.banner__tags
+			span
+				background: #000
+				color: #fff
