--- a/frontend/src/sass/partials/_hero.sass
+++ b/frontend/src/sass/partials/_hero.sass
@@ -1,15 +1,16 @@
 .hero
-	background: url('../img/hero-bg.webp') repeat-x bottom center
+	background: var(--clr-black) url('../img/hero-bg.webp') repeat-x bottom center
 	background-size: cover
 	min-height: 100vh
 	min-height: 100svh
 	display: flex
-	padding: 54px 0
+	padding: 54px 0 200px
 	border-bottom: 1px solid var(--clr-black-300)
+	position: relative
+	z-index: 2
 	+sm
-		padding: 40px 0
-	+xxs
-		padding: 30px 0
+		padding: 40px 0 80px
+
 	.container
 		width: 100%
 		display: flex
@@ -18,14 +19,13 @@
 		+md
 			gap: 50px
 		+sm
-			gap: 40px
-		+xxs
-			gap: 30px
+			gap: 12vh
+
 	&__top
 		display: grid
 		gap: 63px 40px
 		grid-template-columns: 1fr min-content 1fr
-		align-items: center
+		align-items: flex-start
 		padding-top: 5px
 		+md
 			grid-template-columns: 1fr 1fr
@@ -39,6 +39,7 @@
 		grid-column: 1/2
 		grid-row: 1/2
 		font-size: 16px
+		font-weight: 500
 		line-height: 1
 		text-transform: uppercase
 		+md
@@ -46,7 +47,6 @@
 			text-align: center
 		+sm
 			grid-row: auto
-			font-size: 14px
 
 	&__logo
 		grid-column: 2/3
@@ -62,13 +62,14 @@
 		+sm
 			grid-row: auto
 			grid-column: 1/2
-			margin-bottom: 18px
+			margin-bottom: 7vh
 
 	&__location
 		grid-column: 3/4
 		grid-row: 1/2
 		text-align: right
 		font-size: 16px
+		font-weight: 500
 		line-height: 1
 		text-transform: uppercase
 		+md
@@ -78,7 +79,6 @@
 		+sm
 			grid-row: auto
 			grid-column: 1/2
-			font-size: 14px
 	&__name
 		text-transform: uppercase
 		font-size: 24px
@@ -91,64 +91,62 @@
 	&__middle
 		margin: auto 0
 		text-align: center
-
+		+sm
+			margin-top: 0
+	&__sponsorship
+		font-size: 24px
+		font-weight: 500
+		text-transform: uppercase
+		color: var(--clr-theme)
+		margin-bottom: 20px
+		+md
+			font-size: clamp(12px, 2.4vw, 20px)
 	&__title
 		font-size: 72px
 		text-transform: uppercase
 		font-weight: 500
-		line-height: 1
+		line-height: .9
 		text-wrap: balance
 		margin: 0
 		+lg
 			font-size: 62px
 		+md
-			font-size: clamp(32px, 8.4vw, 62px)
+			font-size: clamp(30px, 6.2vw, 52px)
 			line-height: 0.9
 		+xxs
-			font-size: 26px
-
-	&__subtitle
-		max-width: 775px
-		margin: 20px auto 0
-		font-weight: 400
-		font-size: 24px
-		text-wrap: balance
-		+lg
-			font-size: 20px
-		+md
-			font-size: clamp(16px, 2vw, 20px)
-			line-height: 1.2
-		+xxs
-			font-size: 14px
-	&__bottom
-		display: grid
-		grid-template-columns: 1fr auto 1fr
-		align-items: center
-		gap: 40px
-		+md
-			grid-template-columns: auto 1fr
-			gap: 8vh 20px
+			font-size: 24px
+	&__video
+		position: absolute
+		left: 0
+		top: 0
+		width: 100%
+		height: 100%
+		background-size: cover
+		background-position: center
+		background-repeat: no-repeat
+		z-index: -1
 		+sm
-			gap: 7vh 20px
-		+xxs
-			gap: 30px 15px
-	&__event-by
-		grid-column: 3/4
-		text-align: right
-		+md
-			grid-column: 2/3
-	&__socials
-		+md
-			grid-column: 1/2
-	&__sponsorship
-		+md
-			grid-column: 1/3
-			text-align: center
-		+sm
-			font-size: 14px
-		+xxs
-			font-size: 12px
-
+			display: none
+		video
+			position: absolute
+			left: 0
+			top: 0
+			width: 100%
+			height: 100%
+			object-fit: cover
+			object-position: center
+			pointer-events: none
+		&:before
+			content: ''
+			display: block
+			position: absolute
+			top: 0
+			left: 0
+			width: 100%
+			height: 100%
+			pointer-events: none
+			z-index: 1
+			background: linear-gradient(0deg, rgba(0, 0, 0, 0.40) 0%, rgba(0, 0, 0, 0.40) 100%)
 .logo
 	display: block
 	width: 110px
@@ -157,94 +155,9 @@
 	overflow: hidden
 	flex: none
 	+md
-		width: 84px
-		height: 84px
+		width: 80px
+		height: 80px
 	img
 		width: 100%
 		height: 100%
 		object-fit: cover
-
-.socials
-	display: flex
-	align-items: center
-	&__link, &__btn
-		width: 60px
-		height: 60px
-		flex: none
-		display: inline-flex
-		align-items: center
-		justify-content: center
-		border: 1px solid var(--clr-black-300)
-		border-radius: 50%
-		transition: background 0.2s linear, border-color 0.2s linear
-		background: var(--clr-black)
-		padding: 0
-		.icon
-			color: #fff
-			font-size: 22px
-			&-heart
-				top: 1px
-		&:hover
-			background: var(--clr-theme)
-			border-color: var(--clr-theme)
-			.icon
-				color: var(--clr-black)
-
-.socials-dropdown
-	position: relative
-	width: 60px
-	height: 60px
-	z-index: 4
-	.socials
-		position: absolute
-		bottom: 0
-		left: 50%
-		translate: -50% 0
-		transition: visibility 0.2s linear, opacity 0.2s linear
-		visibility: hidden
-		opacity: 0
-		z-index: 5
-		pointer-events: none
-		+md
-			translate: 0 0
-			left: 0
-		+sm
-			flex-direction: column
-
-		&.is-show
-			visibility: visible
-			opacity: 1
-			pointer-events: auto
-	&:hover
-		.social-btn
-			scale: 0
-		.socials
-			visibility: visible
-			opacity: 1
-			pointer-events: auto
-
-.social-btn
-	width: 60px
-	height: 60px
-	flex: none
-	display: inline-flex
-	align-items: center
-	justify-content: center
-	border: 1px solid var(--clr-black-300)
-	border-radius: 50%
-	transition: background 0.2s linear, border-color 0.2s linear, scale 0.2s linear
-	background: var(--clr-black)
-	padding: 0
-
-	&.is-active
-		scale: 0
-	.icon
-		color: #fff
-		font-size: 22px
-		&-heart
-			top: 1px
-	&:hover
-		background: var(--clr-theme)
-		border-color: var(--clr-theme)
-		.icon
-			color: var(--clr-black)
