--- a/frontend/src/sass/partials/_sections.sass
+++ b/frontend/src/sass/partials/_sections.sass
@@ -4,12 +4,34 @@
 		display: flex
 		flex-direction: column
 		gap: 30px
-		margin-bottom: 30px
+		margin-bottom: 50px
+
 		+md
 			gap: 20px
-			margin-bottom: 20px
+			margin-bottom: 40px
 		+sm
 			gap: 13px
+		+xs
+			margin-bottom: 30px
+		&.shine
+			position: relative
+
+			&:before
+				content: ''
+				position: absolute
+				left: 0
+				top: 0
+				z-index: -1
+				width: 260px
+				height: 260px
+				transform: translate(-50%, -50%)
+				border-radius: 50%
+				background: var(--clr-theme)
+				filter: blur(200px)
+				+sm
+					width: 180px
+					height: 180px
+					filter: blur(150px)
 	&__suptitle
 		color: var(--clr-theme)
 		font-size: 16px
@@ -31,7 +53,7 @@
 			font-size: clamp(62px, 6.65vw, 68px)
 		+sm
 			font-size: clamp(32px, 10vw, 62px)
-			line-height: 0.8
+			line-height: 0.9
 
 	&__description
 		font-size: 28px
