--- a/frontend/src/templates/partials/_demographics.html
+++ b/frontend/src/templates/partials/_demographics.html
@@ -1,6 +1,6 @@
 <section class="section sec-demographics" id="demographics">
 	<div class="container">
-		<div class="section__head">
+		<div class="section__head shine">
 			<h2 class="section__title">{{info.statsSubTitle}}</h2>
 			<div class="section__description">
 				{{info.statsDescription}}
