--- a/frontend/src/templates/partials/_hero.html
+++ b/frontend/src/templates/partials/_hero.html
@@ -21,7 +21,7 @@
 	{% if info.brandSelect %}
 	<div class="hero__video">
 		<video preload="auto" loop autoplay muted playsinline>
-			<source src="img/video/{{info.brandSelect}}-hero.mp4" type="video/mp4">
+			<source src="video/{{info.brandSelect}}-hero.mp4" type="video/mp4">
 		</video>
 	</div>
 	{% endif %}
