Add images for high dpi screens

--- a/frontend/src/templates/partials/_follow-us.html
+++ b/frontend/src/templates/partials/_follow-us.html
@@ -1,8 +1,11 @@
 <section class="section sec-follow-us" id="follow-us">
 	<div class="container">
 		<div class="sec-follow-us__img">
-			<img src="{{info.followUsImg.asset.url}}?w=1200&auto=format" alt="{{info.followUsTitle}}" role="presentation">
+			<img src="{{info.followUsImg.asset.url}}?w=1200&auto=format"
+					 srcSet="{{info.followUsImg.asset.url}}?w=1200&auto=format 1x, {{info.followUsImg.asset.url}}?w=2400&auto=format 2x, {{info.followUsImg.asset.url}}?w=3600&auto=format 3x"
+					 alt="{{info.followUsTitle}}" role="presentation">
 		</div>
+
 		<div class="section__head">
 			<h2 class="section__title">{{info.followUsTitle}}</h2>
 			<div class="section__description">
@@ -10,10 +13,9 @@
 			</div>
 		</div>
 
-
 		<div class="follow-us">
 			<form action="https://share.hsforms.com/1N3SFVDZjQLW4rYWjmMr7xA1nl0a" target="_blank" method="GET">
-				<input type="email" required placeholder="your@mail" class="follow-us__input" name="email" />
+				<input type="email" required placeholder="your@mail" class="follow-us__input" name="email"/>
 				<button type="submit" class="follow-us__btn btn btn--outline">Subscribe</button>
 			</form>
 		</div>
