--- a/frontend/src/sass/partials/_about.sass
+++ b/frontend/src/sass/partials/_about.sass
@@ -1,11 +1,11 @@
 .about
 	&__content
 		display: grid
-		grid-template-columns: 1fr calc(50% + 20px)
-		align-items: flex-start
+		// grid-template-columns: 1fr calc(50% + 20px)
+		// align-items: flex-start
 		gap: 20px 40px
 		+md
-			grid-template-columns: 1fr
+			// grid-template-columns: 1fr
 			gap: 15px 0
 		&-left
 			font-size: 22px
